# ESP32-OTA-Commandline

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/logger/: logger.c
components/logger/include/: logger.h
components/ota_utils/: CMakeLists.txt  Kconfig
components/ota_utils/include/: ota_utils.h
components/ota_utils/src/: ota_server.c  wifi_utils.c
hello_world_example/: CMakeLists.txt  Makefile  partition_table.csv  sdkconfig
hello_world_example/main/: main.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  ota_server.c
python/: broadcast.py
